# ghostprompt

./: README.md  pyproject.toml
src/ghostprompt/: __init__.py  embedder.py  registry.py
tests/: test_registry.py
